fixed field naming inconsistency

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,7 +10,7 @@
   <%= f.label :password %>
   <%= f.password_field :password %>
 
-  <%= f.label :password_confirmation, "Confirmation" %>
+  <%= f.label :password_confirmation %>
   <%= f.password_field :password_confirmation %>
 
   <%= f.submit (@user.new_record? ? "Create my account" : "Save changes"),
