--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,6 +5,6 @@
   <div class="span6 offset3">
 	<%= render 'form' %>
 	<%= gravatar_for @user %>
-    <a href="http://gravatar.com/emails">change</a>
+    <a href="http://gravatar.com/emails" target = "_blank">change</a>
   </div>
 </div>
