--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -1,13 +1,9 @@
 
-
-	
 <%= form_for(@micropost) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   <div class="field">
-    <%= f.text_area :content, placeholder: "Compose new micropost..." %>
+    <%= f.text_area :content, placeholder: "Compose new micropost...", id: 'micropostTextArea' %>
   </div>
   <%= f.submit "Post", class: "btn btn-large btn-primary" %>
 <% end %>
 
-	<h2>Count and limit characters, format the defined format display information</h2>
-	<textarea id="testTextarea2" cols="70" rows="10"></textarea>
