--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -1,4 +1,4 @@
-<li id="<%= feed_item.id %>">
+<li id="<%= feed_item.id %>" class = "feed_item">
   <%= link_to gravatar_for(feed_item.user,options = { size: 52 }), feed_item.user %>
   <span class="user">
     <%= link_to feed_item.user.name, feed_item.user %>
