--- a/app/views/shared/_follow.html.erb
+++ b/app/views/shared/_follow.html.erb
@@ -1,4 +1,5 @@
-<%= form_for(current_user.relationships.build(followed_id: @user.id)) do |f| %>
+<%= form_for(current_user.build_following_relationship(@user)) do |f| %>
   <div><%= f.hidden_field :followed_id %></div>
   <%= f.submit "Follow", class: "btn btn-large btn-primary" %>
 <% end %>
+<% # current_user.relationships.build(followed_id: @user.id)%>
