--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,6 +8,9 @@
         <%= @user.name %>
       </h1>
     </section>
+    <section>
+      <%= render 'shared/stats' %>
+     </section>
   </aside>
   <div class="span8">
 	<%= render 'shared/follow_form' if signed_in? %>
