replies: nick in views

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -236,6 +236,9 @@ input, textarea, select, .uneditable-input {
   float: left;
   margin-right: 10px;
 }
+.user {
+  font-weight: bold;	
+}
 aside {
   textarea {
     height: 100px;
