--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -1,7 +1,9 @@
 <li id="<%= feed_item.id %>" class = "feed_item">
   <%= link_to gravatar_for(feed_item.user,options = { size: 52 }), feed_item.user %>
   <span class="user">
-    <%= link_to feed_item.user.name, feed_item.user %>
+    <%=feed_item.user.name%>
   </span>
+  <span class="handle"><%= link_to feed_item.user.handle, feed_item.user %> 
+	</span>
   <%= render 'shared/feed_item_raw', feed_item: feed_item %>
 </li>
