--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,9 +1,12 @@
 <a href="<%= user_path(current_user) %>">
-  <%= gravatar_for current_user, size: 52 %>
+  <%= gravatar_for current_user, size: 64 %>
 </a>
 <h1>
-  <%= current_user.name %>
+  <%= current_user.name %> 
 </h1>
+<span>
+	<%=current_user.handle%>
+</span>
 <span>
   <%= link_to "view my profile", current_user %>
 </span>
