--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -4,6 +4,9 @@
   <%= f.label :name %>
   <%= f.text_field :name %>
 
+  <%= f.label :nick %>
+  <%= f.text_field :nick %>
+
   <%= f.label :email %>
   <%= f.text_field :email %>
 
